# fullstack-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
backend/: .agent  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: notification.py
backend/app/application/example/handlers/: item_command_handler.py  item_query_handler.py
backend/app/application/notification/handlers/: notification_command_handler.py  notification_query_handler.py
backend/app/application/order/handlers/: order_command_handler.py  order_item_action_handler.py  order_query_handler.py
backend/app/application/procurement/handlers/: plan_command_handler.py  plan_item_command_handler.py  plan_query_handler.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py
backend/app/domain/bpmn/entities/: process_definition.py  process_instance.py
backend/app/domain/example/entities/: item.py
backend/app/domain/example/repositories/: item_repository.py
backend/app/domain/notification/entities/: notification.py
backend/app/domain/notification/repositories/: notification_repository.py
backend/app/domain/notification/value_objects/: notification_type.py
backend/app/domain/order/entities/: order_hold.py  order_item.py  (+2 more)
backend/app/domain/shared/: entity.py  exceptions.py  repository.py  value_object.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/database/: session.py
backend/app/models/: notification.py
backend/app/repositories/: base.py  notification.py
backend/app/routers/: example.py
backend/app/schemas/: notification.py
backend/app/services/: notification.py
backend/migrations/: env.py
backend/migrations/versions/: 5da7542ec96a_initial_migration.py
backend/tests/: conftest.py  test_api.py
(+165 files in other folders)
