[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "watchfiles>=0.21.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "gunicorn>=25.3.0",
]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "sqlalchemy[mypy]>=2.0.0",
    "debugpy>=1.8.20",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
    "S",    # flake8-bandit (security)
    "TCH",  # flake8-type-checking
]
ignore = [
    "S101",   # use of assert (needed for pytest)
    "B008",   # FastAPI Depends() in function defaults is idiomatic
    "N818",   # DomainException naming convention differs from project style
    "BLE001", # blind exception catch is intentional in retry helpers
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"


[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/migrations/*"]
